--- a/fly.toml
+++ b/fly.toml
@@ -16,3 +16,5 @@ primary_region = "sin"
   auto_start_machines = true
   min_machines_running = 0
   processes = ["app"]
+[env]
+  TZ="Asia/Jakarta"
