improve my code, send email reminder 30 minutes before schedule, added smtp config on production, write how to run app in readme

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,3 @@
-# TODO: fix this
 stages:
   - test
   - deploy
@@ -7,6 +6,7 @@ test:
   stage: test
   image: golang:latest
   script:
+    - cd GoAttendEasy
     - go test -v ./.. 
   only:
     - master
