--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,5 +17,5 @@ deploy:
   only:
     - master
   script:
-    - flyctl auth login -t "$FLY_TOKEN"
-    - flyctl deploy --now --app "go-attend-easy"
+    - /flyctl auth login -t "$FLY_TOKEN"
+    - /flyctl deploy --now --app "go-attend-easy"
