--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,7 @@ deploy:
     - master
   script:
     - echo "installing flyctl"
+    - apk update && apk add curl
     - curl -L https://fly.io/install.sh | sh | grep 'export' > $HOME/.ashrc && source $HOME/.ashrc && ls
     - flyctl auth login -t "$FLY_TOKEN"
     - flyctl deploy --now --app "go-attend-easy"
