build with remote only

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,4 +11,4 @@ deploy:
     - apk update && apk add curl
     - curl -L https://fly.io/install.sh | sh | grep 'export' > $HOME/.ashrc && source $HOME/.ashrc && ls
     - flyctl auth login -t "$FLY_TOKEN"
-    - flyctl deploy --now --app "go-attend-easy"
+    - flyctl deploy --now --app "go-attend-easy" --remote-only
